--- a/templates/base/package.json.ejs
+++ b/templates/base/package.json.ejs
@@ -2,7 +2,9 @@
   "name": "<%= appName %>",
   "version": "0.0.1",
   "author": "",
-  "dependencies": {},
+  "dependencies": {
+  	"coffee-script": "1.4.x"
+  },
   "devDependencies": {},
   "engines": {
     "node": "0.8.x"
